--- a/GameDownload/GameDownload.yaml
+++ b/GameDownload/GameDownload.yaml
@@ -1,5 +1,6 @@
 payload:
-  - DOMAIN,hw-pcdownload-aws.aki-game.net     # 鸣潮
-  - DOMAIN,hw-pcdownload-qcloud.aki-game.net  # 鸣潮
-  - DOMAIN,hw-pcdownload-cf.aki-game.net      # 鸣潮
-  - DOMAIN,hw-pcdownload-akamai.aki-game.net  # 鸣潮
+  - DOMAIN,hw-pcdownload-aws.aki-game.net     # 鸣潮下载
+  - DOMAIN,hw-pcdownload-qcloud.aki-game.net  # 鸣潮下载
+  - DOMAIN,hw-pcdownload-cf.aki-game.net      # 鸣潮下载
+  - DOMAIN,hw-pcdownload-akamai.aki-game.net  # 鸣潮下载
+  - DOMAIN,autopatchos.zenlesszonezero.com    # 绝区零下载
